fix infinite scroll on mobile

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -36,6 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100px;
 }
 
 .LayoutLeftPanelBack {
