--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -26,6 +26,8 @@ code {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888; 
+  border-radius: 5px;
+
 }
 
 /* Handle on hover */
